src/observer/sql/parser/yacc_sql.output
Terminals unused in grammar

    PATH
    STRING_V


State 47 conflicts: 1 reduce/reduce


Grammar

    0 $accept: commands $end

    1 commands: %empty
    2         | commands command

    3 command: select
    4        | insert
    5        | update
    6        | delete
    7        | create_table
    8        | drop_table
    9        | show_tables
   10        | desc_table
   11        | create_index
   12        | drop_index
   13        | show_index
   14        | sync
   15        | begin
   16        | commit
   17        | rollback
   18        | load_data
   19        | help
   20        | exit

   21 exit: EXIT SEMICOLON

   22 help: HELP SEMICOLON

   23 sync: SYNC SEMICOLON

   24 begin: TRX_BEGIN SEMICOLON

   25 commit: TRX_COMMIT SEMICOLON

   26 rollback: TRX_ROLLBACK SEMICOLON

   27 drop_table: DROP TABLE ID SEMICOLON

   28 show_tables: SHOW TABLES SEMICOLON

   29 desc_table: DESC ID SEMICOLON

   30 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON

   31 drop_index: DROP INDEX ID SEMICOLON

   32 show_index: SHOW INDEX FROM ID SEMICOLON

   33 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

   34 attr_def_list: %empty
   35              | COMMA attr_def attr_def_list

   36 attr_def: ID_get type LBRACE number RBRACE
   37         | ID_get type

   38 number: NUMBER

   39 type: INT_T
   40     | STRING_T
   41     | FLOAT_T
   42     | DATE_T

   43 ID_get: ID

   44 insert: INSERT INTO ID VALUES LBRACE value value_list RBRACE SEMICOLON

   45 value_list: %empty
   46           | COMMA value value_list

   47 value: NUMBER
   48      | FLOAT
   49      | DATE_STR
   50      | SSS

   51 delete: DELETE FROM ID where SEMICOLON

   52 update: UPDATE ID SET ID EQ value where SEMICOLON

   53 select: SELECT select_attr FROM ID rel_list where SEMICOLON

   54 select_attr: MAX LBRACE ID RBRACE aggr_func_list
   55            | MIN LBRACE ID RBRACE aggr_func_list
   56            | SUM LBRACE ID RBRACE aggr_func_list
   57            | AVG LBRACE ID RBRACE aggr_func_list
   58            | COUNT LBRACE STAR RBRACE aggr_func_list
   59            | COUNT LBRACE NUMBER RBRACE aggr_func_list
   60            | COUNT LBRACE ID RBRACE aggr_func_list
   61            | STAR
   62            | STAR attr_list
   63            | ID attr_list
   64            | ID DOT ID attr_list

   65 aggr_func_list: %empty
   66               | COMMA MAX LBRACE ID RBRACE aggr_func_list
   67               | COMMA MIN LBRACE ID RBRACE aggr_func_list
   68               | COMMA SUM LBRACE ID RBRACE aggr_func_list
   69               | COMMA AVG LBRACE ID RBRACE aggr_func_list
   70               | COMMA COUNT LBRACE STAR RBRACE aggr_func_list
   71               | COMMA COUNT LBRACE NUMBER RBRACE aggr_func_list
   72               | COMMA COUNT LBRACE ID RBRACE aggr_func_list

   73 attr_list: %empty
   74          | COMMA MAX LBRACE ID RBRACE attr_list
   75          | COMMA MIN LBRACE ID RBRACE attr_list
   76          | COMMA SUM LBRACE ID RBRACE attr_list
   77          | COMMA AVG LBRACE ID RBRACE attr_list
   78          | COMMA count_func attr_list
   79          | COMMA ID attr_list
   80          | COMMA ID DOT ID attr_list

   81 count_func: COUNT LBRACE STAR RBRACE
   82           | COUNT LBRACE NUMBER RBRACE
   83           | COUNT LBRACE ID RBRACE

   84 rel_list: %empty
   85         | COMMA ID rel_list

   86 where: %empty
   87      | WHERE condition condition_list

   88 condition_list: %empty
   89               | AND condition condition_list

   90 condition: ID comOp value
   91          | value comOp value
   92          | ID comOp ID
   93          | value comOp ID
   94          | ID DOT ID comOp value
   95          | value comOp ID DOT ID
   96          | ID DOT ID comOp ID DOT ID

   97 comOp: EQ
   98      | LT
   99      | GT
  100      | LE
  101      | GE
  102      | NE
  103      | NOT LK
  104      | LK

  105 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 21 22 23 24 25 26 27 28 29 30 31 32 33 44 51 52 53 105
    CREATE (259) 30 33
    DROP (260) 27 31
    TABLE (261) 27 33 105
    TABLES (262) 28
    INDEX (263) 30 31 32
    SELECT (264) 53
    DESC (265) 29
    SHOW (266) 28 32
    SYNC (267) 23
    INSERT (268) 44
    DELETE (269) 51
    UPDATE (270) 52
    LBRACE (271) 30 33 36 44 54 55 56 57 58 59 60 66 67 68 69 70 71 72 74 75 76 77 81 82 83
    RBRACE (272) 30 33 36 44 54 55 56 57 58 59 60 66 67 68 69 70 71 72 74 75 76 77 81 82 83
    COMMA (273) 35 46 66 67 68 69 70 71 72 74 75 76 77 78 79 80 85
    TRX_BEGIN (274) 24
    TRX_COMMIT (275) 25
    TRX_ROLLBACK (276) 26
    INT_T (277) 39
    STRING_T (278) 40
    FLOAT_T (279) 41
    DATE_T (280) 42
    HELP (281) 22
    EXIT (282) 21
    DOT (283) 64 80 94 95 96
    INTO (284) 44 105
    VALUES (285) 44
    FROM (286) 32 51 53
    WHERE (287) 87
    AND (288) 89
    SET (289) 52
    ON (290) 30
    LOAD (291) 105
    DATA (292) 105
    INFILE (293) 105
    NOT (294) 103
    LK (295) 103 104
    EQ (296) 52 97
    LT (297) 98
    GT (298) 99
    LE (299) 100
    GE (300) 101
    NE (301) 102
    NUMBER <number> (302) 38 47 59 71 82
    FLOAT <floats> (303) 48
    MAX <string> (304) 54 66 74
    MIN <string> (305) 55 67 75
    COUNT <string> (306) 58 59 60 70 71 72 81 82 83
    AVG <string> (307) 57 69 77
    SUM <string> (308) 56 68 76
    ID <string> (309) 27 29 30 31 32 33 43 44 51 52 53 54 55 56 57 60 63 64 66 67 68 69 72 74 75 76 77 79 80 83 85 90 92 93 94 95 96 105
    PATH <string> (310)
    DATE_STR <string> (311) 49
    SSS <string> (312) 50 105
    STAR <string> (313) 58 61 62 70 81
    STRING_V <string> (314)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    commands (61)
        on left: 1 2
        on right: 0 2
    command (62)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 2
    exit (63)
        on left: 21
        on right: 20
    help (64)
        on left: 22
        on right: 19
    sync (65)
        on left: 23
        on right: 14
    begin (66)
        on left: 24
        on right: 15
    commit (67)
        on left: 25
        on right: 16
    rollback (68)
        on left: 26
        on right: 17
    drop_table (69)
        on left: 27
        on right: 8
    show_tables (70)
        on left: 28
        on right: 9
    desc_table (71)
        on left: 29
        on right: 10
    create_index (72)
        on left: 30
        on right: 11
    drop_index (73)
        on left: 31
        on right: 12
    show_index (74)
        on left: 32
        on right: 13
    create_table (75)
        on left: 33
        on right: 7
    attr_def_list (76)
        on left: 34 35
        on right: 33 35
    attr_def (77)
        on left: 36 37
        on right: 33 35
    number <number> (78)
        on left: 38
        on right: 36
    type <number> (79)
        on left: 39 40 41 42
        on right: 36 37
    ID_get (80)
        on left: 43
        on right: 36 37
    insert (81)
        on left: 44
        on right: 4
    value_list (82)
        on left: 45 46
        on right: 44 46
    value <value1> (83)
        on left: 47 48 49 50
        on right: 44 46 52 90 91 93 94 95
    delete (84)
        on left: 51
        on right: 6
    update (85)
        on left: 52
        on right: 5
    select (86)
        on left: 53
        on right: 3
    select_attr (87)
        on left: 54 55 56 57 58 59 60 61 62 63 64
        on right: 53
    aggr_func_list (88)
        on left: 65 66 67 68 69 70 71 72
        on right: 54 55 56 57 58 59 60 66 67 68 69 70 71 72
    attr_list (89)
        on left: 73 74 75 76 77 78 79 80
        on right: 62 63 64 74 75 76 77 78 79 80
    count_func (90)
        on left: 81 82 83
        on right: 78
    rel_list (91)
        on left: 84 85
        on right: 53 85
    where (92)
        on left: 86 87
        on right: 51 52 53
    condition_list (93)
        on left: 88 89
        on right: 87 89
    condition <condition1> (94)
        on left: 90 91 92 93 94 95 96
        on right: 87 89
    comOp (95)
        on left: 97 98 99 100 101 102 103 104
        on right: 90 91 92 93 94 95 96
    load_data (96)
        on left: 105
        on right: 18


State 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end          shift, and go to state 2
    CREATE        shift, and go to state 3
    DROP          shift, and go to state 4
    SELECT        shift, and go to state 5
    DESC          shift, and go to state 6
    SHOW          shift, and go to state 7
    SYNC          shift, and go to state 8
    INSERT        shift, and go to state 9
    DELETE        shift, and go to state 10
    UPDATE        shift, and go to state 11
    TRX_BEGIN     shift, and go to state 12
    TRX_COMMIT    shift, and go to state 13
    TRX_ROLLBACK  shift, and go to state 14
    HELP          shift, and go to state 15
    EXIT          shift, and go to state 16
    LOAD          shift, and go to state 17

    command       go to state 18
    exit          go to state 19
    help          go to state 20
    sync          go to state 21
    begin         go to state 22
    commit        go to state 23
    rollback      go to state 24
    drop_table    go to state 25
    show_tables   go to state 26
    desc_table    go to state 27
    create_index  go to state 28
    drop_index    go to state 29
    show_index    go to state 30
    create_table  go to state 31
    insert        go to state 32
    delete        go to state 33
    update        go to state 34
    select        go to state 35
    load_data     go to state 36


State 2

    0 $accept: commands $end .

    $default  accept


State 3

   30 create_index: CREATE . INDEX ID ON ID LBRACE ID RBRACE SEMICOLON
   33 create_table: CREATE . TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    TABLE  shift, and go to state 37
    INDEX  shift, and go to state 38


State 4

   27 drop_table: DROP . TABLE ID SEMICOLON
   31 drop_index: DROP . INDEX ID SEMICOLON

    TABLE  shift, and go to state 39
    INDEX  shift, and go to state 40


State 5

   53 select: SELECT . select_attr FROM ID rel_list where SEMICOLON

    MAX    shift, and go to state 41
    MIN    shift, and go to state 42
    COUNT  shift, and go to state 43
    AVG    shift, and go to state 44
    SUM    shift, and go to state 45
    ID     shift, and go to state 46
    STAR   shift, and go to state 47

    select_attr  go to state 48


State 6

   29 desc_table: DESC . ID SEMICOLON

    ID  shift, and go to state 49


State 7

   28 show_tables: SHOW . TABLES SEMICOLON
   32 show_index: SHOW . INDEX FROM ID SEMICOLON

    TABLES  shift, and go to state 50
    INDEX   shift, and go to state 51


State 8

   23 sync: SYNC . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 9

   44 insert: INSERT . INTO ID VALUES LBRACE value value_list RBRACE SEMICOLON

    INTO  shift, and go to state 53


State 10

   51 delete: DELETE . FROM ID where SEMICOLON

    FROM  shift, and go to state 54


State 11

   52 update: UPDATE . ID SET ID EQ value where SEMICOLON

    ID  shift, and go to state 55


State 12

   24 begin: TRX_BEGIN . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 13

   25 commit: TRX_COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 14

   26 rollback: TRX_ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 58


State 15

   22 help: HELP . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 16

   21 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 60


State 17

  105 load_data: LOAD . DATA INFILE SSS INTO TABLE ID SEMICOLON

    DATA  shift, and go to state 61


State 18

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


State 19

   20 command: exit .

    $default  reduce using rule 20 (command)


State 20

   19 command: help .

    $default  reduce using rule 19 (command)


State 21

   14 command: sync .

    $default  reduce using rule 14 (command)


State 22

   15 command: begin .

    $default  reduce using rule 15 (command)


State 23

   16 command: commit .

    $default  reduce using rule 16 (command)


State 24

   17 command: rollback .

    $default  reduce using rule 17 (command)


State 25

    8 command: drop_table .

    $default  reduce using rule 8 (command)


State 26

    9 command: show_tables .

    $default  reduce using rule 9 (command)


State 27

   10 command: desc_table .

    $default  reduce using rule 10 (command)


State 28

   11 command: create_index .

    $default  reduce using rule 11 (command)


State 29

   12 command: drop_index .

    $default  reduce using rule 12 (command)


State 30

   13 command: show_index .

    $default  reduce using rule 13 (command)


State 31

    7 command: create_table .

    $default  reduce using rule 7 (command)


State 32

    4 command: insert .

    $default  reduce using rule 4 (command)


State 33

    6 command: delete .

    $default  reduce using rule 6 (command)


State 34

    5 command: update .

    $default  reduce using rule 5 (command)


State 35

    3 command: select .

    $default  reduce using rule 3 (command)


State 36

   18 command: load_data .

    $default  reduce using rule 18 (command)


State 37

   33 create_table: CREATE TABLE . ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 62


State 38

   30 create_index: CREATE INDEX . ID ON ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 63


State 39

   27 drop_table: DROP TABLE . ID SEMICOLON

    ID  shift, and go to state 64


State 40

   31 drop_index: DROP INDEX . ID SEMICOLON

    ID  shift, and go to state 65


State 41

   54 select_attr: MAX . LBRACE ID RBRACE aggr_func_list

    LBRACE  shift, and go to state 66


State 42

   55 select_attr: MIN . LBRACE ID RBRACE aggr_func_list

    LBRACE  shift, and go to state 67


State 43

   58 select_attr: COUNT . LBRACE STAR RBRACE aggr_func_list
   59            | COUNT . LBRACE NUMBER RBRACE aggr_func_list
   60            | COUNT . LBRACE ID RBRACE aggr_func_list

    LBRACE  shift, and go to state 68


State 44

   57 select_attr: AVG . LBRACE ID RBRACE aggr_func_list

    LBRACE  shift, and go to state 69


State 45

   56 select_attr: SUM . LBRACE ID RBRACE aggr_func_list

    LBRACE  shift, and go to state 70


State 46

   63 select_attr: ID . attr_list
   64            | ID . DOT ID attr_list

    COMMA  shift, and go to state 71
    DOT    shift, and go to state 72

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 73


State 47

   61 select_attr: STAR .
   62            | STAR . attr_list

    COMMA  shift, and go to state 71

    FROM      reduce using rule 61 (select_attr)
    FROM      [reduce using rule 73 (attr_list)]
    $default  reduce using rule 61 (select_attr)

    attr_list  go to state 74


State 48

   53 select: SELECT select_attr . FROM ID rel_list where SEMICOLON

    FROM  shift, and go to state 75


State 49

   29 desc_table: DESC ID . SEMICOLON

    SEMICOLON  shift, and go to state 76


State 50

   28 show_tables: SHOW TABLES . SEMICOLON

    SEMICOLON  shift, and go to state 77


State 51

   32 show_index: SHOW INDEX . FROM ID SEMICOLON

    FROM  shift, and go to state 78


State 52

   23 sync: SYNC SEMICOLON .

    $default  reduce using rule 23 (sync)


State 53

   44 insert: INSERT INTO . ID VALUES LBRACE value value_list RBRACE SEMICOLON

    ID  shift, and go to state 79


State 54

   51 delete: DELETE FROM . ID where SEMICOLON

    ID  shift, and go to state 80


State 55

   52 update: UPDATE ID . SET ID EQ value where SEMICOLON

    SET  shift, and go to state 81


State 56

   24 begin: TRX_BEGIN SEMICOLON .

    $default  reduce using rule 24 (begin)


State 57

   25 commit: TRX_COMMIT SEMICOLON .

    $default  reduce using rule 25 (commit)


State 58

   26 rollback: TRX_ROLLBACK SEMICOLON .

    $default  reduce using rule 26 (rollback)


State 59

   22 help: HELP SEMICOLON .

    $default  reduce using rule 22 (help)


State 60

   21 exit: EXIT SEMICOLON .

    $default  reduce using rule 21 (exit)


State 61

  105 load_data: LOAD DATA . INFILE SSS INTO TABLE ID SEMICOLON

    INFILE  shift, and go to state 82


State 62

   33 create_table: CREATE TABLE ID . LBRACE attr_def attr_def_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 83


State 63

   30 create_index: CREATE INDEX ID . ON ID LBRACE ID RBRACE SEMICOLON

    ON  shift, and go to state 84


State 64

   27 drop_table: DROP TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 85


State 65

   31 drop_index: DROP INDEX ID . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 66

   54 select_attr: MAX LBRACE . ID RBRACE aggr_func_list

    ID  shift, and go to state 87


State 67

   55 select_attr: MIN LBRACE . ID RBRACE aggr_func_list

    ID  shift, and go to state 88


State 68

   58 select_attr: COUNT LBRACE . STAR RBRACE aggr_func_list
   59            | COUNT LBRACE . NUMBER RBRACE aggr_func_list
   60            | COUNT LBRACE . ID RBRACE aggr_func_list

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    STAR    shift, and go to state 91


State 69

   57 select_attr: AVG LBRACE . ID RBRACE aggr_func_list

    ID  shift, and go to state 92


State 70

   56 select_attr: SUM LBRACE . ID RBRACE aggr_func_list

    ID  shift, and go to state 93


State 71

   74 attr_list: COMMA . MAX LBRACE ID RBRACE attr_list
   75          | COMMA . MIN LBRACE ID RBRACE attr_list
   76          | COMMA . SUM LBRACE ID RBRACE attr_list
   77          | COMMA . AVG LBRACE ID RBRACE attr_list
   78          | COMMA . count_func attr_list
   79          | COMMA . ID attr_list
   80          | COMMA . ID DOT ID attr_list

    MAX    shift, and go to state 94
    MIN    shift, and go to state 95
    COUNT  shift, and go to state 96
    AVG    shift, and go to state 97
    SUM    shift, and go to state 98
    ID     shift, and go to state 99

    count_func  go to state 100


State 72

   64 select_attr: ID DOT . ID attr_list

    ID  shift, and go to state 101


State 73

   63 select_attr: ID attr_list .

    $default  reduce using rule 63 (select_attr)


State 74

   62 select_attr: STAR attr_list .

    $default  reduce using rule 62 (select_attr)


State 75

   53 select: SELECT select_attr FROM . ID rel_list where SEMICOLON

    ID  shift, and go to state 102


State 76

   29 desc_table: DESC ID SEMICOLON .

    $default  reduce using rule 29 (desc_table)


State 77

   28 show_tables: SHOW TABLES SEMICOLON .

    $default  reduce using rule 28 (show_tables)


State 78

   32 show_index: SHOW INDEX FROM . ID SEMICOLON

    ID  shift, and go to state 103


State 79

   44 insert: INSERT INTO ID . VALUES LBRACE value value_list RBRACE SEMICOLON

    VALUES  shift, and go to state 104


State 80

   51 delete: DELETE FROM ID . where SEMICOLON

    WHERE  shift, and go to state 105

    $default  reduce using rule 86 (where)

    where  go to state 106


State 81

   52 update: UPDATE ID SET . ID EQ value where SEMICOLON

    ID  shift, and go to state 107


State 82

  105 load_data: LOAD DATA INFILE . SSS INTO TABLE ID SEMICOLON

    SSS  shift, and go to state 108


State 83

   33 create_table: CREATE TABLE ID LBRACE . attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 109

    attr_def  go to state 110
    ID_get    go to state 111


State 84

   30 create_index: CREATE INDEX ID ON . ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 112


State 85

   27 drop_table: DROP TABLE ID SEMICOLON .

    $default  reduce using rule 27 (drop_table)


State 86

   31 drop_index: DROP INDEX ID SEMICOLON .

    $default  reduce using rule 31 (drop_index)


State 87

   54 select_attr: MAX LBRACE ID . RBRACE aggr_func_list

    RBRACE  shift, and go to state 113


State 88

   55 select_attr: MIN LBRACE ID . RBRACE aggr_func_list

    RBRACE  shift, and go to state 114


State 89

   59 select_attr: COUNT LBRACE NUMBER . RBRACE aggr_func_list

    RBRACE  shift, and go to state 115


State 90

   60 select_attr: COUNT LBRACE ID . RBRACE aggr_func_list

    RBRACE  shift, and go to state 116


State 91

   58 select_attr: COUNT LBRACE STAR . RBRACE aggr_func_list

    RBRACE  shift, and go to state 117


State 92

   57 select_attr: AVG LBRACE ID . RBRACE aggr_func_list

    RBRACE  shift, and go to state 118


State 93

   56 select_attr: SUM LBRACE ID . RBRACE aggr_func_list

    RBRACE  shift, and go to state 119


State 94

   74 attr_list: COMMA MAX . LBRACE ID RBRACE attr_list

    LBRACE  shift, and go to state 120


State 95

   75 attr_list: COMMA MIN . LBRACE ID RBRACE attr_list

    LBRACE  shift, and go to state 121


State 96

   81 count_func: COUNT . LBRACE STAR RBRACE
   82           | COUNT . LBRACE NUMBER RBRACE
   83           | COUNT . LBRACE ID RBRACE

    LBRACE  shift, and go to state 122


State 97

   77 attr_list: COMMA AVG . LBRACE ID RBRACE attr_list

    LBRACE  shift, and go to state 123


State 98

   76 attr_list: COMMA SUM . LBRACE ID RBRACE attr_list

    LBRACE  shift, and go to state 124


State 99

   79 attr_list: COMMA ID . attr_list
   80          | COMMA ID . DOT ID attr_list

    COMMA  shift, and go to state 71
    DOT    shift, and go to state 125

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 126


State 100

   78 attr_list: COMMA count_func . attr_list

    COMMA  shift, and go to state 71

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 127


State 101

   64 select_attr: ID DOT ID . attr_list

    COMMA  shift, and go to state 71

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 128


State 102

   53 select: SELECT select_attr FROM ID . rel_list where SEMICOLON

    COMMA  shift, and go to state 129

    $default  reduce using rule 84 (rel_list)

    rel_list  go to state 130


State 103

   32 show_index: SHOW INDEX FROM ID . SEMICOLON

    SEMICOLON  shift, and go to state 131


State 104

   44 insert: INSERT INTO ID VALUES . LBRACE value value_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 132


State 105

   87 where: WHERE . condition condition_list

    NUMBER    shift, and go to state 133
    FLOAT     shift, and go to state 134
    ID        shift, and go to state 135
    DATE_STR  shift, and go to state 136
    SSS       shift, and go to state 137

    value      go to state 138
    condition  go to state 139


State 106

   51 delete: DELETE FROM ID where . SEMICOLON

    SEMICOLON  shift, and go to state 140


State 107

   52 update: UPDATE ID SET ID . EQ value where SEMICOLON

    EQ  shift, and go to state 141


State 108

  105 load_data: LOAD DATA INFILE SSS . INTO TABLE ID SEMICOLON

    INTO  shift, and go to state 142


State 109

   43 ID_get: ID .

    $default  reduce using rule 43 (ID_get)


State 110

   33 create_table: CREATE TABLE ID LBRACE attr_def . attr_def_list RBRACE SEMICOLON

    COMMA  shift, and go to state 143

    $default  reduce using rule 34 (attr_def_list)

    attr_def_list  go to state 144


State 111

   36 attr_def: ID_get . type LBRACE number RBRACE
   37         | ID_get . type

    INT_T     shift, and go to state 145
    STRING_T  shift, and go to state 146
    FLOAT_T   shift, and go to state 147
    DATE_T    shift, and go to state 148

    type  go to state 149


State 112

   30 create_index: CREATE INDEX ID ON ID . LBRACE ID RBRACE SEMICOLON

    LBRACE  shift, and go to state 150


State 113

   54 select_attr: MAX LBRACE ID RBRACE . aggr_func_list

    COMMA  shift, and go to state 151

    $default  reduce using rule 65 (aggr_func_list)

    aggr_func_list  go to state 152


State 114

   55 select_attr: MIN LBRACE ID RBRACE . aggr_func_list

    COMMA  shift, and go to state 151

    $default  reduce using rule 65 (aggr_func_list)

    aggr_func_list  go to state 153


State 115

   59 select_attr: COUNT LBRACE NUMBER RBRACE . aggr_func_list

    COMMA  shift, and go to state 151

    $default  reduce using rule 65 (aggr_func_list)

    aggr_func_list  go to state 154


State 116

   60 select_attr: COUNT LBRACE ID RBRACE . aggr_func_list

    COMMA  shift, and go to state 151

    $default  reduce using rule 65 (aggr_func_list)

    aggr_func_list  go to state 155


State 117

   58 select_attr: COUNT LBRACE STAR RBRACE . aggr_func_list

    COMMA  shift, and go to state 151

    $default  reduce using rule 65 (aggr_func_list)

    aggr_func_list  go to state 156


State 118

   57 select_attr: AVG LBRACE ID RBRACE . aggr_func_list

    COMMA  shift, and go to state 151

    $default  reduce using rule 65 (aggr_func_list)

    aggr_func_list  go to state 157


State 119

   56 select_attr: SUM LBRACE ID RBRACE . aggr_func_list

    COMMA  shift, and go to state 151

    $default  reduce using rule 65 (aggr_func_list)

    aggr_func_list  go to state 158


State 120

   74 attr_list: COMMA MAX LBRACE . ID RBRACE attr_list

    ID  shift, and go to state 159


State 121

   75 attr_list: COMMA MIN LBRACE . ID RBRACE attr_list

    ID  shift, and go to state 160


State 122

   81 count_func: COUNT LBRACE . STAR RBRACE
   82           | COUNT LBRACE . NUMBER RBRACE
   83           | COUNT LBRACE . ID RBRACE

    NUMBER  shift, and go to state 161
    ID      shift, and go to state 162
    STAR    shift, and go to state 163


State 123

   77 attr_list: COMMA AVG LBRACE . ID RBRACE attr_list

    ID  shift, and go to state 164


State 124

   76 attr_list: COMMA SUM LBRACE . ID RBRACE attr_list

    ID  shift, and go to state 165


State 125

   80 attr_list: COMMA ID DOT . ID attr_list

    ID  shift, and go to state 166


State 126

   79 attr_list: COMMA ID attr_list .

    $default  reduce using rule 79 (attr_list)


State 127

   78 attr_list: COMMA count_func attr_list .

    $default  reduce using rule 78 (attr_list)


State 128

   64 select_attr: ID DOT ID attr_list .

    $default  reduce using rule 64 (select_attr)


State 129

   85 rel_list: COMMA . ID rel_list

    ID  shift, and go to state 167


State 130

   53 select: SELECT select_attr FROM ID rel_list . where SEMICOLON

    WHERE  shift, and go to state 105

    $default  reduce using rule 86 (where)

    where  go to state 168


State 131

   32 show_index: SHOW INDEX FROM ID SEMICOLON .

    $default  reduce using rule 32 (show_index)


State 132

   44 insert: INSERT INTO ID VALUES LBRACE . value value_list RBRACE SEMICOLON

    NUMBER    shift, and go to state 133
    FLOAT     shift, and go to state 134
    DATE_STR  shift, and go to state 136
    SSS       shift, and go to state 137

    value  go to state 169


State 133

   47 value: NUMBER .

    $default  reduce using rule 47 (value)


State 134

   48 value: FLOAT .

    $default  reduce using rule 48 (value)


State 135

   90 condition: ID . comOp value
   92          | ID . comOp ID
   94          | ID . DOT ID comOp value
   96          | ID . DOT ID comOp ID DOT ID

    DOT  shift, and go to state 170
    NOT  shift, and go to state 171
    LK   shift, and go to state 172
    EQ   shift, and go to state 173
    LT   shift, and go to state 174
    GT   shift, and go to state 175
    LE   shift, and go to state 176
    GE   shift, and go to state 177
    NE   shift, and go to state 178

    comOp  go to state 179


State 136

   49 value: DATE_STR .

    $default  reduce using rule 49 (value)


State 137

   50 value: SSS .

    $default  reduce using rule 50 (value)


State 138

   91 condition: value . comOp value
   93          | value . comOp ID
   95          | value . comOp ID DOT ID

    NOT  shift, and go to state 171
    LK   shift, and go to state 172
    EQ   shift, and go to state 173
    LT   shift, and go to state 174
    GT   shift, and go to state 175
    LE   shift, and go to state 176
    GE   shift, and go to state 177
    NE   shift, and go to state 178

    comOp  go to state 180


State 139

   87 where: WHERE condition . condition_list

    AND  shift, and go to state 181

    $default  reduce using rule 88 (condition_list)

    condition_list  go to state 182


State 140

   51 delete: DELETE FROM ID where SEMICOLON .

    $default  reduce using rule 51 (delete)


State 141

   52 update: UPDATE ID SET ID EQ . value where SEMICOLON

    NUMBER    shift, and go to state 133
    FLOAT     shift, and go to state 134
    DATE_STR  shift, and go to state 136
    SSS       shift, and go to state 137

    value  go to state 183


State 142

  105 load_data: LOAD DATA INFILE SSS INTO . TABLE ID SEMICOLON

    TABLE  shift, and go to state 184


State 143

   35 attr_def_list: COMMA . attr_def attr_def_list

    ID  shift, and go to state 109

    attr_def  go to state 185
    ID_get    go to state 111


State 144

   33 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list . RBRACE SEMICOLON

    RBRACE  shift, and go to state 186


State 145

   39 type: INT_T .

    $default  reduce using rule 39 (type)


State 146

   40 type: STRING_T .

    $default  reduce using rule 40 (type)


State 147

   41 type: FLOAT_T .

    $default  reduce using rule 41 (type)


State 148

   42 type: DATE_T .

    $default  reduce using rule 42 (type)


State 149

   36 attr_def: ID_get type . LBRACE number RBRACE
   37         | ID_get type .

    LBRACE  shift, and go to state 187

    $default  reduce using rule 37 (attr_def)


State 150

   30 create_index: CREATE INDEX ID ON ID LBRACE . ID RBRACE SEMICOLON

    ID  shift, and go to state 188


State 151

   66 aggr_func_list: COMMA . MAX LBRACE ID RBRACE aggr_func_list
   67               | COMMA . MIN LBRACE ID RBRACE aggr_func_list
   68               | COMMA . SUM LBRACE ID RBRACE aggr_func_list
   69               | COMMA . AVG LBRACE ID RBRACE aggr_func_list
   70               | COMMA . COUNT LBRACE STAR RBRACE aggr_func_list
   71               | COMMA . COUNT LBRACE NUMBER RBRACE aggr_func_list
   72               | COMMA . COUNT LBRACE ID RBRACE aggr_func_list

    MAX    shift, and go to state 189
    MIN    shift, and go to state 190
    COUNT  shift, and go to state 191
    AVG    shift, and go to state 192
    SUM    shift, and go to state 193


State 152

   54 select_attr: MAX LBRACE ID RBRACE aggr_func_list .

    $default  reduce using rule 54 (select_attr)


State 153

   55 select_attr: MIN LBRACE ID RBRACE aggr_func_list .

    $default  reduce using rule 55 (select_attr)


State 154

   59 select_attr: COUNT LBRACE NUMBER RBRACE aggr_func_list .

    $default  reduce using rule 59 (select_attr)


State 155

   60 select_attr: COUNT LBRACE ID RBRACE aggr_func_list .

    $default  reduce using rule 60 (select_attr)


State 156

   58 select_attr: COUNT LBRACE STAR RBRACE aggr_func_list .

    $default  reduce using rule 58 (select_attr)


State 157

   57 select_attr: AVG LBRACE ID RBRACE aggr_func_list .

    $default  reduce using rule 57 (select_attr)


State 158

   56 select_attr: SUM LBRACE ID RBRACE aggr_func_list .

    $default  reduce using rule 56 (select_attr)


State 159

   74 attr_list: COMMA MAX LBRACE ID . RBRACE attr_list

    RBRACE  shift, and go to state 194


State 160

   75 attr_list: COMMA MIN LBRACE ID . RBRACE attr_list

    RBRACE  shift, and go to state 195


State 161

   82 count_func: COUNT LBRACE NUMBER . RBRACE

    RBRACE  shift, and go to state 196


State 162

   83 count_func: COUNT LBRACE ID . RBRACE

    RBRACE  shift, and go to state 197


State 163

   81 count_func: COUNT LBRACE STAR . RBRACE

    RBRACE  shift, and go to state 198


State 164

   77 attr_list: COMMA AVG LBRACE ID . RBRACE attr_list

    RBRACE  shift, and go to state 199


State 165

   76 attr_list: COMMA SUM LBRACE ID . RBRACE attr_list

    RBRACE  shift, and go to state 200


State 166

   80 attr_list: COMMA ID DOT ID . attr_list

    COMMA  shift, and go to state 71

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 201


State 167

   85 rel_list: COMMA ID . rel_list
